--- a/docs/flow/en.mdx
+++ b/docs/flow/en.mdx
@@ -56,6 +56,8 @@
    - **Drag and drop**: Tap and hold the drag icon, then move the selected translation to match the word or phrase. Once released, the translation will be paired with the word or phrase, and any previous pairings will be swapped.
      ![Description](/flow/assets/match_pairs_learning.gif)
 
+**Please note:** you can end the Learning at any time and in this case the percentage of correct answers is deducted from the number of questions answered during the Learning.
+
 4. **Training**
    After a successful learning session, if you're feeling confident, you can test your knowledge on the Training page. There are two types of training available (with or without a timer):
 
@@ -74,7 +76,10 @@
    - **Flip cards**: Enter the correct translation for each word or phrase and press the check button. Be careful, as the case of letters matters.
      ![Description](/flow/assets/training_flip_cards_en.jpg)
 
-   **Note: If you answer incorrectly, the word or phrase is more likely to appear in future training sessions, helping you better memorize it.**
+   **Note:**
+
+   - If you answer incorrectly, the word or phrase is more likely to appear in future training sessions, helping you better memorize it.
+   - You can end the Training at any time and in this case the percentage of correct answers is deducted from the number of questions answered during the Training.
 
 5. **View statistics**
    After completing your training session, you can review your results on the Statistics page. For each training session, you can see your correct and incorrect answers, the date, the translation direction, and more.
