--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -57,6 +57,8 @@
 
   ![Description](/flow/assets/match_pairs_learning.gif)
 
+  **Зверніть увагу:** ви можете в будь-який момент завершити Навчання і в цьому випадку відсоток правильних відповідей вираховується від кількості питань, на які було дано відповідь під час Навчання.
+
 4. **Тренування**
 
 Після успішного Навчання, якщо почуваєте себе впевнено, можете перевірити свої знання на сторінці Тренування. Тут вам доступні два види навчання (з таймером або без):
@@ -77,6 +79,8 @@
   ![Description](/flow/assets/training_flip_cards_uk.jpg)
 
   **Важливо зазначити, що у випадку невірної відповіді слово чи фраза з більшою вірогідністю потрапить в наступне Навчання та Тренування, таким чином ви маєте можливість краще його запам'ятати.**
+
+  **Зверніть увагу:** ви можете в будь-який момент завершити Тренування і в цьому випадку відсоток правильних відповідей вираховується від кількості питань, на які було дано відповідь під час Тренування.
 
 5. **Перегляд статистики**
 
