--- a/docs/policy/en.mdx
+++ b/docs/policy/en.mdx
@@ -48,7 +48,7 @@ We collect personal information that you voluntarily provide to us when you regi
 
 **Payment Data.** We may collect data necessary to process your payment if you choose to make purchases, such as your payment instrument number, and the security code associated with your payment instrument. All payment data is handled and stored by Google Play. You may find their privacy notice link(s) here: [https://policies.google.com/privacy?hl=en](https://policies.google.com/privacy?hl=en).
 
-**Social Media Login Data.** We may provide you with the option to register with us using your existing social media account details, like your Facebook, X, or other social media account. If you choose to register in this way, we will collect certain profile information about you from the social media provider, as described in the section called "HOW DO WE HANDLE YOUR SOCIAL LOGINS?" below.
+**Social Media Login Data.** We may provide you with the option to register with us using your existing social media account details, like your Facebook or other social media account. If you choose to register in this way, we will collect certain profile information about you from the social media provider, as described in the section called "HOW DO WE HANDLE YOUR SOCIAL LOGINS?" below.
 
 **Application Data.** If you use our application(s), we also may collect the following information if you choose to provide us with access or permission:
 
@@ -80,11 +80,11 @@ Our use of information received from Google APIs will adhere to [Google API Ser
 
 **Information collected from other sources**
 
-**_In Short:_** *We may collect limited data from public databases, marketing partners, \_social media platforms,* and other outside sources.\
+**_In Short:_** *We may collect limited data from public databases, marketing partners, \_social media platforms,* and other outside sources.
 
 In order to enhance our ability to provide relevant marketing, offers, and services to you and update our records, we may obtain information about you from other sources, such as public databases, joint marketing partners, affiliate programs, data providers, social media platforms, and from other third parties. This information includes mailing addresses, job titles, email addresses, phone numbers, intent data (or user behavior data), Internet Protocol (IP) addresses, social media profiles, social media URLs, and custom profiles, for purposes of targeted advertising and event promotion.
 
-If you interact with us on a social media platform using your social media account (e.g., Facebook or X), we receive personal information about you from such platforms such as your name, email address, and gender. You may have the right to withdraw your consent to processing your personal information. Any personal information that we collect from your social media account depends on your social media account's privacy settings. Please note that their own use of your information is not governed by this Privacy Notice.
+If you interact with us on a social media platform using your social media account (e.g., Facebook), we receive personal information about you from such platforms such as your name, email address, and gender. You may have the right to withdraw your consent to processing your personal information. Any personal information that we collect from your social media account depends on your social media account's privacy settings. Please note that their own use of your information is not governed by this Privacy Notice.
 
 **2\. HOW DO WE PROCESS YOUR INFORMATION?**
 
@@ -192,7 +192,7 @@ Specific information about how we use such technologies and how you can refuse c
 
 **_In Short:_** *If you choose to register or log in to our Services using a social media account, we may have access to certain information about you.*
 
-Our Services offer you the ability to register and log in using your third-party social media account details (like your Facebook or X logins). Where you choose to do this, we will receive certain profile information about you from your social media provider. The profile information we receive may vary depending on the social media provider concerned, but will often include your name, email address, friends list, and profile picture, as well as other information you choose to make public on such a social media platform.
+Our Services offer you the ability to register and log in using your third-party social media account details (like your Facebook). Where you choose to do this, we will receive certain profile information about you from your social media provider. The profile information we receive may vary depending on the social media provider concerned, but will often include your name, email address, friends list, and profile picture, as well as other information you choose to make public on such a social media platform.
 
 We will use the information we receive only for the purposes that are described in this Privacy Notice or that are otherwise made clear to you on the relevant Services. Please note that we do not control, and are not responsible for, other uses of your personal information by your third-party social media provider. We recommend that you review their privacy notice to understand how they collect, use, and share your personal information, and how you can set your privacy preferences on their sites and apps.
 
