--- a/docs/flow/en.mdx
+++ b/docs/flow/en.mdx
@@ -108,3 +108,15 @@
 
    Control the display of sections on the Home Page and access other application settings, including adding or removing language pairs (Premium users only).
    ![Description](/flow/assets/account_en.jpg)
+
+8. **How to Delete Your Account in Lexiko application**
+
+- **Open the App**
+- **Go to the "Account Settings" screen**
+- **Tap on the "Delete Account" button**
+
+![Description](/flow/assets/delete_acc_en.webp)
+
+Once you confirm, all your account data will be permanently deleted from our servers, and the process cannot be undone.
+
+For any additional assistance, please contact us at roman.onishencko@yahoo.com
