--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -108,3 +108,15 @@
 
 Ви можете контролювати відображення певних секцій Домашньої сторінки на сторінці Налаштувань акаунта. Також тут вам доступний ряд інших налаштувань додатка та можливість додавати або видаляти мовні пари (для Преміум користувачів)
 ![Description](/flow/assets/account_uk.jpg)
+
+8. **Як видалити обліковий запис у додатку Lexiko**
+
+- **Відкрийте додаток**
+- **Перейдіть на екран «Налаштування акаунта»**
+- **Натисніть кнопку «Видалити акаунт»**
+
+![Description](/flow/assets/delete_acc_uk.webp)
+
+Після підтвердження всі дані вашого акаунта буде назавжди видалено з наших серверів, і процес неможливо скасувати.
+
+Щоб отримати додаткову допомогу, зв’яжіться з нами за адресою roman.onishencko@yahoo.com
