--- a/docs/premium/en.mdx
+++ b/docs/premium/en.mdx
@@ -13,8 +13,8 @@ The "Premium" subscription is designed to remove any restrictions on the way to 
 - **Add multiple language pairs and switch between them at any time**
   ![Description](/premium/assets/multiple_lang_pairs_eng.png)
 
-  - **Backup of data and subsequent download to the device is also available for Premium users. This can be useful if you've been using an app on your smartphone and then logged into your account from a tablet or another smartphone and want to sync your app data**
-    ![Description](/premium/assets/backup_eng.webp)
+- **By default, all application data is stored locally on your device. If you reinstall the Lexiko application, this data may be lost. Use the backup feature to protect your data from deletion. Backup of data and subsequent download to the device is also available for Premium users. This can be useful if you've been using an app on your smartphone and then logged into your account from a tablet or another smartphone and want to sync your app data**
+  ![Description](/premium/assets/backup_eng.webp)
 
 - **Translate not only words, but also phrases or short sentences of up to 5 words**
   ![Description](/premium/assets/translate_phrases_eng.png)
