--- a/docs/premium/uk.mdx
+++ b/docs/premium/uk.mdx
@@ -13,8 +13,8 @@
 - **Додавати декілька мовних пар та переключатись між ними в будь-який момент**
   ![Description](/premium/assets/multiple_lang_pairs_ukr.png)
 
-  - **Для Преміум користувачів доступний бекап даних та подальше їх завантаження на пристрій. Це може бути корисно, якщо ви користувались додатком на вашому смартфоні, а потім зайшли в ваш акаунт з планшету або іншого смартфону і хочете синхронізувати дані вашого додатку**
-    ![Description](/premium/assets/backup_ukr.webp)
+- **За замовчуванням усі дані додатка зберігаються локально на вашому пристрої. Якщо ви перевстановите додаток Lexiko, ці дані можуть бути втрачені. Використовуйте функцію резервного копіювання (бекап), щоб захистити дані додатка від видалення. Для Преміум користувачів доступний бекап даних та подальше їх завантаження на пристрій. Це може бути корисно, якщо ви користувались додатком на вашому смартфоні, а потім зайшли в ваш акаунт з планшету або іншого смартфону і хочете синхронізувати дані вашого додатку**
+  ![Description](/premium/assets/backup_ukr.webp)
 
 - **Перекладати не лише слова, але й фрази або короткі речення до 5 слів**
   ![Description](/premium/assets/translate_phrases_ukr.png)
